syntax = "proto3";

package grpc;
import "common.proto";

option java_package = "com.grpc.empuje_comunitario.proto";
option java_multiple_files = true;
option java_outer_classname = "DonationInventoryServiceProto";

enum DonationCategory {
  ROPA = 0;
  ALIMENTOS = 1;
  JUGUETES = 2;
  UTILES_ESCOLARES = 3;
}

message DonationInventory {
  string id = 1;
  DonationCategory category = 2;
  string description = 3;
  int32 quantity = 4;
  bool deleted = 5;

  string created_at = 6;
  string created_by = 7;
  string updated_at = 8;
  string updated_by = 9;
}

message DonationInventoryCreateRequest {
  string id = 1;
  DonationCategory category = 2;
  string description = 3;
  int32 quantity = 4;
  string created_by = 6;
}

message CreateDonationInventoryRequest {
  string token = 1;
  DonationInventoryCreateRequest inventory = 2;
}

message UpdateDonationInventoryRequest {
  string token = 1;
  string id = 2;
  DonationCategory category = 3;
  string description = 4;
  int32 quantity = 5;
}

message DeleteDonationInventoryRequest {
  string token = 1;
  string id = 2;
}

message ListDonationInventoryRequest {
  string token = 1;
}

// Responses
message ListDonationInventoryResponse {
  bool success = 1;
  string message = 2;
  repeated DonationInventory inventories = 3;
}

message UpdateDonationInventoryResponse {
  bool success = 1;
  string message = 2;
  DonationInventory inventory = 3;
}

service DonationInventoryService {
  rpc CreateDonationInventory (CreateDonationInventoryRequest) returns (GenericResponse);
  rpc UpdateDonationInventory (UpdateDonationInventoryRequest) returns (UpdateDonationInventoryResponse);
  rpc DeleteDonationInventory (DeleteDonationInventoryRequest) returns (GenericResponse);
  rpc ListDonationInventory (ListDonationInventoryRequest) returns (ListDonationInventoryResponse);
}